<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/btn_save" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btnSave">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivHero"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:contentDescription="@string/image_description"
                    tools:src="@android:drawable/ic_menu_camera" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/ivHero"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/ivHero"
                    android:hint="@string/et_name"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/etAlterEgo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/ivHero"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/ivHero"
                    android:hint="@string/et_alter_ego"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <View
                    android:id="@+id/viewDivider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/ivHero"
                    android:layout_marginTop="16dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/tvBio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/viewDivider"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/tv_bio"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etBio"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_below="@id/tvBio"
                    android:layout_marginTop="16dp"
                    android:hint="@string/et_bio"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLines="10" />

                <TextView
                    android:id="@+id/tvPower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etBio"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/tv_power"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <RatingBar
                    android:id="@+id/rbPower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvPower"
                    android:layout_centerHorizontal="true"
                    android:progressTint="@color/teal_200" />

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

</layout>